增添提现功能

--- a/files/月收入/styles.css
+++ b/files/月收入/styles.css
@@ -658,12 +658,91 @@
 #u266 {
   border-width:0px;
   position:absolute;
+  left:331px;
+  top:128px;
+  width:64px;
+  height:45px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
+}
+#u267_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:375px;
+  height:45px;
+  background:inherit;
+  background-color:rgba(228, 228, 228, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(187, 187, 187, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:16px;
+}
+#u267 {
+  border-width:0px;
+  position:absolute;
+  left:20px;
+  top:685px;
+  width:375px;
+  height:45px;
+  font-size:16px;
+}
+#u268 {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:13px;
+  width:371px;
+  word-wrap:break-word;
+}
+#u269_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:322px;
+  height:56px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#BBBBBB;
+}
+#u269 {
+  border-width:0px;
+  position:absolute;
+  left:43px;
+  top:394px;
+  width:322px;
+  height:56px;
+  color:#BBBBBB;
+}
+#u270 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:322px;
+  word-wrap:break-word;
+}
+#u271 {
+  border-width:0px;
+  position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u267_div {
+#u272_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -681,7 +760,7 @@
   font-weight:410;
   font-style:normal;
 }
-#u267 {
+#u272 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -692,7 +771,7 @@
   font-weight:410;
   font-style:normal;
 }
-#u268 {
+#u273 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -701,7 +780,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u269_div {
+#u274_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -731,7 +810,7 @@
   color:#999999;
   line-height:20px;
 }
-#u269 {
+#u274 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -744,7 +823,7 @@
   color:#999999;
   line-height:20px;
 }
-#u270 {
+#u275 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -752,7 +831,7 @@
   width:371px;
   word-wrap:break-word;
 }
-#u271_div {
+#u276_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -772,26 +851,26 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   color:#1E1E1E;
   line-height:20px;
 }
-#u271 {
+#u276 {
   border-width:0px;
   position:absolute;
   left:20px;
   top:425px;
   width:100px;
   height:45px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   color:#1E1E1E;
   line-height:20px;
 }
-#u271_div.mouseDown {
+#u276_div.mouseDown {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -811,15 +890,15 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   color:#1E1E1E;
   line-height:20px;
 }
-#u271.mouseDown {
+#u276.mouseDown {
 }
-#u272 {
+#u277 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -827,7 +906,7 @@
   width:100px;
   word-wrap:break-word;
 }
-#u273_div {
+#u278_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -852,7 +931,7 @@
   font-style:normal;
   line-height:36px;
 }
-#u273 {
+#u278 {
   border-width:0px;
   position:absolute;
   left:78px;
@@ -864,7 +943,7 @@
   font-style:normal;
   line-height:36px;
 }
-#u274 {
+#u279 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -872,7 +951,7 @@
   width:125px;
   word-wrap:break-word;
 }
-#u275_div {
+#u280_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -892,26 +971,26 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   color:#1E1E1E;
   line-height:20px;
 }
-#u275 {
+#u280 {
   border-width:0px;
   position:absolute;
   left:295px;
   top:425px;
   width:100px;
   height:45px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   color:#1E1E1E;
   line-height:20px;
 }
-#u275_div.mouseDown {
+#u280_div.mouseDown {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -931,15 +1010,15 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   color:#1E1E1E;
   line-height:20px;
 }
-#u275.mouseDown {
+#u280.mouseDown {
 }
-#u276 {
+#u281 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -947,7 +1026,7 @@
   width:100px;
   word-wrap:break-word;
 }
-#u277_div {
+#u282_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -972,7 +1051,7 @@
   font-style:normal;
   line-height:36px;
 }
-#u277 {
+#u282 {
   border-width:0px;
   position:absolute;
   left:213px;
@@ -984,7 +1063,7 @@
   font-style:normal;
   line-height:36px;
 }
-#u278 {
+#u283 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -992,7 +1071,7 @@
   width:125px;
   word-wrap:break-word;
 }
-#u279_div {
+#u284_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1020,7 +1099,7 @@
   font-style:normal;
   line-height:20px;
 }
-#u279 {
+#u284 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -1032,7 +1111,7 @@
   font-style:normal;
   line-height:20px;
 }
-#u280 {
+#u285 {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -1040,14 +1119,4 @@
   width:371px;
   visibility:hidden;
   word-wrap:break-word;
-}
-#u281 {
-  border-width:0px;
-  position:absolute;
-  left:331px;
-  top:128px;
-  width:64px;
-  height:45px;
-  overflow:hidden;
-  background-image:url('../../resources/images/transparent.gif');
 }
