--- a/files/流水详情页/styles.css
+++ b/files/流水详情页/styles.css
@@ -338,7 +338,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-style:normal;
   text-align:left;
   line-height:24px;
@@ -350,7 +350,7 @@
   top:279px;
   width:276px;
   height:73px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-style:normal;
   text-align:left;
   line-height:24px;
