--- a/files/筛选页/styles.css
+++ b/files/筛选页/styles.css
@@ -390,6 +390,14 @@
   width:29px;
   white-space:nowrap;
 }
+#u1037_ann {
+  border-width:0px;
+  position:absolute;
+  left:388px;
+  top:223px;
+  width:1px;
+  height:1px;
+}
 #u1050 {
   border-width:0px;
   position:absolute;
